crates/oxc_codegen/tests/integration/snapshots/astro/expression_returning_multiple_elements.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<Layout title="Welcome to Astro.">
    <main>
        <h1>Welcome to <span class="text-gradient">Astro</span></h1>
        {
            Object.entries(DUMMY_DATA).map(([dummyKey, dummyValue]) => {
                return (
                    <p>
                        onlyp {dummyKey}
                    </p>
                    <h2>
                        onlyh2 {dummyKey}
                    </h2>
                    <div>
                        <h2>div+h2 {dummyKey}</h2>
                    </div>
                    <p>
                        <h2>p+h2 {dummyKey}</h2>
                    </p>
                );
            })
        }
    </main>
</Layout>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Astro = $$createAstro("https://astro.build");
const Astro = $$Astro;
const $$Component = $$createComponent(($$result, $$props, $$slots) => {
const Astro = $$result.createAstro($$Astro, $$props, $$slots);
Astro.self = $$Component;

return $$render`${$$renderComponent($$result,"Layout",Layout,{"title":"Welcome to Astro."},{"default": () => $$render`
    ${$$maybeRenderHead($$result)}<main>
        <h1>Welcome to <span class="text-gradient">Astro</span></h1>
        ${
            Object.entries(DUMMY_DATA).map(([dummyKey, dummyValue]) => {
                return (
                    $$render`<p>
                        onlyp ${dummyKey}
                    </p>
                    <h2>
                        onlyh2 ${dummyKey}
                    </h2>
                    <div>
                        <h2>div+h2 ${dummyKey}</h2>
                    </div>
                    <p>
                        </p><h2>p+h2 ${dummyKey}</h2>
                    `
                );
            })
        }
    </main>
`,})}`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Astro = $$createAstro("https://astro.build");
const Astro = $$Astro;
const $$Component = $$createComponent(($$result, $$props, $$slots) => {
const Astro = $$result.createAstro($$Astro, $$props, $$slots);
Astro.self = $$Component;

return $$render`${$$renderComponent($$result,"Layout",Layout,{"title":"Welcome to Astro."},{"default": () => $$render`
    ${$$maybeRenderHead($$result)}<main>
        <h1>Welcome to <span class="text-gradient">Astro</span></h1>
        ${Object.entries(DUMMY_DATA).map(([dummyKey, dummyValue]) => {
	return ($$render`<p>
                        onlyp ${dummyKey}
                    </p><h2>
                        onlyh2 ${dummyKey}
                    </h2><div>
                        <h2>div+h2 ${dummyKey}</h2>
                    </div><p>
                        <h2>p+h2 ${dummyKey}</h2>
                    </p>`);
})}
    </main>
`,})}`;
}, undefined, undefined);
export default $$Component;

