crates/oxc_codegen/tests/integration/snapshots/astro/expression_with_leading_whitespace.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<section>
<ul class="font-mono text-sm flex flex-col gap-0.5">
    {
        <li>Build: { new Date().toISOString() }</li>
        <li>NODE_VERSION: { process.env.NODE_VERSION }</li>
    }
</ul>
</section>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<section>
<ul class="font-mono text-sm flex flex-col gap-0.5">
    ${
        $$render`<li>Build: ${ new Date().toISOString() }</li>
        <li>NODE_VERSION: ${ process.env.NODE_VERSION }</li>`
    }
</ul>
</section>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<section>
<ul class="font-mono text-sm flex flex-col gap-0.5">
    ${$$render`<li>Build: ${new Date().toISOString()}</li>
        <li>NODE_VERSION: ${process.env.NODE_VERSION}</li>`}
</ul>
</section>`;
}, undefined, undefined);
export default $$Component;

